@@ -1,15 +1,11 @@
 package ait.cohort5860.post.service;
 
+import ait.cohort5860.post.dao.CommentRepository;
 import ait.cohort5860.post.dao.PostRepository;
 import ait.cohort5860.post.dao.TagRepository;
 import ait.cohort5860.post.dto.NewCommentDto;
 import ait.cohort5860.post.dto.NewPostDto;
 import ait.cohort5860.post.dto.PostDto;
-
-import java.time.LocalDate;
-import java.util.*;
-import java.util.stream.Collectors;
-
 import ait.cohort5860.post.dto.exception.PostNotFoundException;
 import ait.cohort5860.post.model.Comment;
 import ait.cohort5860.post.model.Post;
@@ -19,27 +15,27 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
+import java.util.List;
+import java.util.Set;
+
 @Service
 @RequiredArgsConstructor
 public class PostServiceImpl implements PostService {
-    private final TagRepository tagRepository;
     private final PostRepository postRepository;
+    private final TagRepository tagRepository;
+    private final CommentRepository commentRepository;
     private final ModelMapper modelMapper;
-
 
     @Override
     @Transactional
     public PostDto addNewPost(String author, NewPostDto newPostDto) {
         Post post = new Post(newPostDto.getTitle(), newPostDto.getContent(), author);
-        Set<String> tags = newPostDto.getTags();
-        if (tags != null) {
-            for (String tagName : tags) {
-                Tag tag = tagRepository.findById(tagName).orElseGet(() -> tagRepository.save(new Tag(tagName)));
-                post.addTag(tag);
-            }
-        }
-        post = postRepository.save(post);
-        return modelMapper.map(post, PostDto.class);
+
+        // Handle tags
+        return getPostDto(newPostDto, post);
     }
 
     @Override
@@ -49,21 +45,42 @@ public class PostServiceImpl implements PostService {
     }
 
     @Override
+    @Transactional
     public void addLike(Long id) {
-
+        Post post = postRepository.findById(id).orElseThrow(PostNotFoundException::new);
+        post.addLike();
     }
 
     @Override
+    @Transactional
     public PostDto updatePost(Long id, NewPostDto newPostDto) {
         Post post = postRepository.findById(id).orElseThrow(PostNotFoundException::new);
-        post.setTitle(newPostDto.getTitle());
-        post.setContent(newPostDto.getContent());
-        postRepository.save(post);
+        String content = newPostDto.getContent();
+        if (content != null) {
+            post.setContent(content);
+        }
+        String title = newPostDto.getTitle();
+        if (title != null) {
+            post.setTitle(title);
+        }
+        return getPostDto(newPostDto, post);
+    }
+
+    private PostDto getPostDto(NewPostDto newPostDto, Post post) {
+        Set<String> tags = newPostDto.getTags();
+        if (tags != null) {
+            for (String tagName : tags) {
+                Tag tag = tagRepository.findById(tagName)
+                        .orElseGet(() -> tagRepository.save(new Tag(tagName)));
+                post.addTag(tag);
+            }
+        }
+        post = postRepository.save(post);
         return modelMapper.map(post, PostDto.class);
     }
 
-
     @Override
+    @Transactional
     public PostDto deletePost(Long id) {
         Post post = postRepository.findById(id).orElseThrow(PostNotFoundException::new);
         postRepository.delete(post);
@@ -71,39 +88,40 @@ public class PostServiceImpl implements PostService {
     }
 
     @Override
-    public PostDto addComment(Long id, String author, NewCommentDto newCommendDto) {
+    @Transactional
+    public PostDto addComment(Long id, String author, NewCommentDto newCommentDto) {
         Post post = postRepository.findById(id).orElseThrow(PostNotFoundException::new);
-        Comment comment = new Comment(newCommendDto.getMessage(), author);
+        Comment comment = new Comment(author, newCommentDto.getMessage());
+        // TODO check it
         post.addComment(comment);
-        postRepository.save(post);
+        commentRepository.save(comment);
+        comment.setPost(post);
         return modelMapper.map(post, PostDto.class);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public Iterable<PostDto> findPostsByAuthor(String author) {
-        List<Post> posts = postRepository.findByAuthor(author);
-        return posts.stream()
-                .map(post -> modelMapper.map(post, PostDto.class))
-                .collect(Collectors.toList());
-    }
-
-
-    @Override
-    public Iterable<PostDto> findPostsByTags(List<String> tag) {
-        return null;
+        return postRepository.findByAuthorIgnoreCase(author)
+                .map(p -> modelMapper.map(p, PostDto.class))
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
+    public Iterable<PostDto> findPostsByTags(List<String> tags) {
+        return postRepository.findDistinctByTagsNameInIgnoreCase(tags)
+                .map(p -> modelMapper.map(p, PostDto.class))
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
     public Iterable<PostDto> findPostsByPeriod(LocalDate dateFrom, LocalDate dateTo) {
-        return null;
-    }
-
-    @Override
-    public PostDto addComment(Long postId, NewCommentDto commentDto) {
-        Post post = postRepository.findById(postId).orElseThrow(PostNotFoundException::new);
-        Comment comment = new Comment(commentDto.getMessage(), commentDto.getAuthor());
-        post.addComment(comment);
-        postRepository.save(post);
-        return modelMapper.map(post, PostDto.class);
+        LocalDateTime from = dateFrom.atStartOfDay();
+        LocalDateTime to = dateTo.atTime(LocalTime.MAX);
+        return postRepository.findByDateCreatedBetween(from, to)
+                .map(p -> modelMapper.map(p, PostDto.class))
+                .toList();
     }
 }
